--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -64,6 +64,7 @@
 	</div>
 </div>
 <div class="info inline-flow">
+	<?= $this->render("./post/_updates.phtml")?>
 	<div class='ui-widget ui-widget-content ui-corner-all'>
 		<h3>What is D3Up?</h3>
 		<p>D3Up is designed as a tool to help you find information about Items, a place to create varies Character Builds, and compare your items to determine which stats will change.</p>
