Initial Item Search/Filtering

--- a/application/views/scripts/user/builds.phtml
+++ b/application/views/scripts/user/builds.phtml
@@ -5,7 +5,7 @@
 <? else: ?>
 	<p><a href="/build/create" style="padding: 5px 20px" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only">Add Character Build</a></p>
 	<? if($this->builds->count()):?>
-	<table id="recent-builds">
+	<table id="recent-builds" class="d3up-table">
 		<tbody>
 			<tr>
 				<td colspan="10" class="build-paginator">
