--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -268,6 +268,10 @@ ul#navigation li {
 	line-height: 32px;
 	padding-left: 10px;
 }
+.d3up-table td.description {
+	max-width: 380px;
+	overflow: hidden;
+}
 .d3up-table td.icon {
 	width: 42px;
 	padding: 0;
