--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -130,7 +130,7 @@ ul#navigation {
 	list-style: none;
 /*	border-bottom: 1px solid #777;*/
 }
-ul#navigation li {
+ul#navigation > li {
 	display: inline-block;
 	padding: 0px 15px;
 }
