Changed sys message for logo/art

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -49,7 +49,7 @@
 			</ul>
 		</div>
 		<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
-			<b>System Message</b>: Instead of spamming everyone at the top of the page all the time, I've created a section for updates. You'll see the link on the navigation bar, and this bar will soon be reserved for critical announcements. Please submit feedback/bugs/complains/praise/whatever on the <a href="http://www.reddit.com/r/Diablo/comments/vpetk/ready_for_testers_item_comparison_character/">/r/diablo post</a> for now, or you can email me directly at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>. Thanks!</a>.
+			<b>System Message</b>: I'm tired of seeing giagantic letters at the top of the page, so I'm looking for a logo or some sort of mascot. Want more details? Check out <a href="http://www.reddit.com/r/Diablo/comments/wgxtg/any_artsycomicy_people_want_to_do_up_a_logo_for/">the reddit thread with some ideas</a>. Thanks!</a>.
 		</div>
 		<div id="main">
 			<div id="content">
