--- a/application/views/scripts/record/view.phtml
+++ b/application/views/scripts/record/view.phtml
@@ -4,3 +4,6 @@
 <? if($this->record->_type == 'build'): ?>
 	<?= $this->render('record/build.phtml') ?>
 <? endif; ?>
+<? if($this->record->_type == 'sale'): ?>
+	<?= $this->render('record/sale.phtml') ?>
+<? endif; ?>
