--- a/public_html/css/jquery.dropdown.css
+++ b/public_html/css/jquery.dropdown.css
@@ -10,7 +10,7 @@ ul.dropdown li a.hover              { position: relative; }
 	LEVEL TWO
 */
 ul.dropdown ul 						{ list-style: none; text-align: left; display: block; width: 200px; margin: 0; padding: 0; display: none; position: absolute; top: 0; left: 0; z-index: 1000; }
-ul.dropdown ul li 					{ padding: 3px 10px; font-weight: normal; background: #333; border-top: 1px solid #777; }
-ul.dropdown ul li:first-child { border: none; }
+ul.dropdown ul li 					{ font-weight: normal; background-color: #333; border: 1px solid #000; border-top: 0px}
+ul.dropdown ul li:hover { background-color: #444; }
 ul.dropdown ul li a					{ display: block; } 
 ul.dropdown ul li a:hover			{ display: block; } 
