--- a/application/views/scripts/item/index.phtml
+++ b/application/views/scripts/item/index.phtml
@@ -351,6 +351,6 @@
 		} ?>
 	</script>
 	<? endif ?>
-	<script type="text/javascript" src="/js/fullcalc.js"></script>
+	<script type="text/javascript" src="/js/calc.js"></script>
 	<script type="text/javascript" src="/js/fullbrowser.js"></script>
 <? endif ?>
